# ChangeLog for app-dicts/ydpdict
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/ydpdict/ChangeLog,v 1.20 2013/06/01 11:08:23 pacho Exp $

  01 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #137506

  20 Jan 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup fue retirement, bug #35242

  17 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org> ydpdict-1.0.0.ebuild:
  QA: fix ebuild for EAPI=2; econf was being executed twice.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> ydpdict-0.99.3.ebuild,
  ydpdict-1.0.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  08 Jan 2012; Michał Januszewski <spock@gentoo.org> ydpdict-1.0.0.ebuild:
  Remove 'unicode' mistakenly added to ISUE.

  08 Jan 2012; Michał Januszewski <spock@gentoo.org> ydpdict-1.0.0.ebuild:
  Add a missing dependency on ncurses (bug #380855).

  18 Oct 2009; Michał Januszewski <spock@gentoo.org> ydpdict-1.0.0.ebuild:
  Make it possible to use ydpdict with new versions of libydpdict.

  07 Sep 2008; Michał Januszewski <spock@gentoo.org> -ydpdict-0.63.ebuild,
  -ydpdict-0.64.ebuild, -ydpdict-0.66.ebuild, -ydpdict-0.99.0.ebuild:
  Remove old ebuilds.

*ydpdict-1.0.0 (07 Sep 2008)

  07 Sep 2008; Michał Januszewski <spock@gentoo.org> +ydpdict-1.0.0.ebuild:
  Version bump.

  27 Aug 2008; Dawid Węgliński <cla@gentoo.org> ydpdict-0.99.3.ebuild:
  Stable on x86/amd64 (bug #209813)

*ydpdict-0.99.3 (23 Jan 2008)

  23 Jan 2008; Piotr Jaroszyński <peper@gentoo.org> +ydpdict-0.99.3.ebuild:
  Add 0.99.3.

*ydpdict-0.99.0 (26 Feb 2007)

  26 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> metadata.xml,
  +ydpdict-0.99.0.ebuild:
  Version bump. Add myself to the metadata.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  25 Jan 2007; Marius Mauch <genone@gentoo.org> ydpdict-0.63.ebuild,
  ydpdict-0.64.ebuild, ydpdict-0.66.ebuild:
  Replacing einfo with elog
