@@ -5,13 +5,13 @@ DIST prettytable-0.6.tar.gz 19663 SHA256 6414f9f5ddba04fcca39f09a9852ec3585b92b6
 DIST prettytable-0.7.1.tar.gz 24448 SHA256 686bda277474e5cc3cff02596d72c2d6f171170225af3dedffe78cbf958c6348 SHA512 5389f3c31cb7482f6796c7f369fc9ef79e2029c783e33c0845dd28a1a6394e66395a1d452072ed89aeb2c38705b8f631a20d093b1bd817c3175e32367f552147 WHIRLPOOL daf155240cd35ce87ac333211a234edee0bf2960bf7bf7ad240d566a803f958b9ada977bbd3a51e85006e333565a950c4070e94290ec7e7bc45f8ccbb63328b7
 EBUILD prettytable-0.6-r1.ebuild 644 SHA256 9d2b78d4374324e89bb7f0f647f1b552499317e0c61737d0fcf7e7d57a83fff9 SHA512 aae5e886a0efa16d684f80c9ddf96a6f2dd4ac31dc7c15eac852b6bf41b29ec7579d29935fa41b34c276587cf84c31ccf7e54b3201f789947a26b4defa5a2d0d WHIRLPOOL b931e3c0cd00c309bb4f010a6e94796a78511da9feb04b25c7982e6e015f03703dd53066f8f041dfb3a80eb5df7021379c3090107868e0aeaa7603ee03557de2
 EBUILD prettytable-0.6.ebuild 653 SHA256 47b6a4b61f1c5d228c77a646590129c7db4252d063634f837b988b48188c89ba SHA512 dd5dab9af204495954bf906ba479eabd83a7bdc53d58035547960ece1fab1d43a797c397d514e3484df43d5ddf9ceb422ffb89d40ed2b81c654f6f6942b2dec3 WHIRLPOOL eaa33f1604c8b797c71a4e0ea086033bacec7980faa729ef715035b31277fb2caa2f162567a92c835e73766a21e7e81b0052b376c2d6c0edceb44c2333e7913b
-EBUILD prettytable-0.7.1.ebuild 692 SHA256 1eea310a4479b09444e2be7b78bd873f6549600de40a89201708d95613b4ee75 SHA512 825ace60ffa4feb638a3130fbdeeb9d8736798f2ad970acab38634f9bde66db57efd83f795b2f71503df5324f4902d371acfd5726e0240dfb4e18f62eb24aec5 WHIRLPOOL 60eb48012fe631d7a89c2f7f632d88ed2c8564fe0bf5b74499c14cea9fac5f943f5188f1eed3c7acbfc190901a999b4be8928d9611ae078ae7ba4a9c642bc88b
-MISC ChangeLog 1034 SHA256 594095ac932aef8c38d86ca373b6d4bd9823ed4a5048204e9246d282fb070128 SHA512 963a53d1fba2861a49aad40c8e7038927fa7b6651b467d83f0ec567b399d8c3b8f5d9482fd2600b3438913801553e72541aae9e0b214584d9a681ff69bffea69 WHIRLPOOL 2e16ab4fd7dcdf78b354c049e894b6591414f56e53b7ec3b9f29acc7967ae960e2711decadb3b882885cfe93185a137e00d505ae423a43db4ef35bf3adaa406d
+EBUILD prettytable-0.7.1.ebuild 695 SHA256 513bd2077a3ffccfa61ae1c44bfb5526ceec3fd7ba5992ec867e2eba5cc47eef SHA512 e7e7418ba396de4a1591b17225a677fc303e0c18a3c460599e4b38131f01722fab1f7bdb04647bd7b0701d3c89fa31436120a5bb78e772634c44ce7a64163a39 WHIRLPOOL 8e4799a394813e1159066cc6260fb6e2b697cb772c06477f6d44d0ed0bec96cc904ae4658bbf97e2e9580f616916175c1e191e2c84a6493c6a6fd6dc96eea35a
+MISC ChangeLog 1155 SHA256 a2f6b9028d118015ca418f99981ebbffa48693d7f69af54fc5469562d897b09d SHA512 b443931de4118f37287cf3d1f2bb8bb4110b1c10c6927b57149b8be0210b2a595dc78dad6e9820d8a7f92ab8ffa6f622b4d87d9c2f05f43cb25cbbac280c9ac2 WHIRLPOOL 3b75e4027f671a613bd6c2d43e524a8ec05b279c14b7dbefe464706f294acf906dd421ce0c5cad8985f1fab5e78136d7d6a4058a19273f24c0b89a2771f2ad12
 MISC metadata.xml 317 SHA256 2c2ae247321d60df696f48d3fc14042951ebd1df44dcf8ae76e750df98b244b4 SHA512 f918c598a5c072e3e2b79fb58d602f62436c249fe78a0be7e70f64e89b51aef5b069696e0ed8c78c9c2345145b170486363ccc165dd25b3add4f65b1856dde90 WHIRLPOOL d50623db7608aa49dcffcbb47e6290d78da517b805e4ed3d700e73465b26a5bbc1a21c136d1b0c6388e3c1f889c6e09701b31bad9243f6655a48653749d9ebc2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlJaW70ACgkQCaWpQKGI+9Tl/wCeINhwI80/ySWHGmPvj7x5QeuB
-iQMAnRLkRvWXNxpmMYLQf+B3S4Hd1jQp
-=PF0x
+iEYEAREIAAYFAlKuneoACgkQso7CE7gHKw1UdQCghGaD4+3zM614EPeevRi8Ch9r
+dWAAn3GoEAQOLW8vvanc2lWQO5BO8vvD
+=dDCH
 -----END PGP SIGNATURE-----
