@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/prettytable-0.7.1.ebuild,v 1.2 2013/09/05 18:46:04 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/prettytable-0.7.1.ebuild,v 1.3 2013/12/16 06:29:45 idella4 Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_6 python2_7 )
@@ -21,5 +21,5 @@ DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 RDEPEND=""
 
 python_test() {
-	${PYTHON} prettytable_test.py || die
+	"${PYTHON}" prettytable_test.py || die
 }
