@@ -1,6 +1,11 @@
 # ChangeLog for app-dicts/ydpdict
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/ydpdict/ChangeLog,v 1.20 2013/06/01 11:08:23 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/ydpdict/ChangeLog,v 1.21 2013/12/16 06:30:57 patrick Exp $
+
+*ydpdict-1.0.2 (16 Dec 2013)
+
+  16 Dec 2013; Patrick Lauer <patrick@gentoo.org> +ydpdict-1.0.2.ebuild:
+  Bump
 
   01 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Cleanup due bug #137506
